--- a/theme/views/components/footer.twig
+++ b/theme/views/components/footer.twig
@@ -21,7 +21,7 @@
           </div>
 
           <div class="mt-2">
-            <a href="{{ entity.phone | phone_link }}">{{ entity.phone | us_phone('(') }}</a>
+            <a href="{{ entity.phone | phone_link }}">{{ entity.phone | us_phone('classic') }}</a>
             <br>
             <a href="mailto:{{ entity.email }}">{{ entity.email }}</a>
           </div>
