simplified 'template' boilerplate

--- a/theme/views/404.twig
+++ b/theme/views/404.twig
@@ -1,5 +1,8 @@
 {% extends "base.twig" %}
 
+{{ <pre>
+  {{ dump($post) }}
+</pre> }}
 {% set includes = "includes/404/" %}
 
 {% block content %}Page not found{% endblock %}
