--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 /*
 Theme Name: Pseudo Theme
-Description: :theme_description
-Version: 1.0.0
-Author: :theme_author
+Theme URI: :theme_url
+Author: the :theme_author
 Author URI: :author_url
+Description: :theme_description
+Version: :theme_version
+Requires at least: 5.0
+Tested up to: 5.8
+Requires PHP: 7.4
+License: MIT
+License URI: https://opensource.org/licenses/MIT
 Text Domain: pseudo-theme
+Domain Path /lang
+Tags:
 */
