restructured theme sass using 7-1 architecture

--- a/assets/src/theme/scss/abstracts/functions/_assets.scss
+++ b/assets/src/theme/scss/abstracts/functions/_assets.scss
@@ -1,9 +1,9 @@
 ///
-
 @function asset($asset) {
   @return url("../../#{$asset}");
 }
 
+///
 @function image($image) {
   @return asset("images/#{$image}");
 }
