boilerplate for using and configuring google tag manager

--- a/views/theme/includes/base/google-tag-manager--head.twig
+++ b/views/theme/includes/base/google-tag-manager--head.twig
@@ -12,5 +12,5 @@
     f
       .parentNode
       .insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', 'GTM-5XLLXS8');
+  })(window, document, 'script', 'dataLayer', {{ google_tag_manager_id }});
 </script>
