--- a/views/theme/includes/base/google-tag-manager--body.twig
+++ b/views/theme/includes/base/google-tag-manager--body.twig
@@ -1,3 +1,3 @@
 <noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5XLLXS8" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  <iframe src="https://www.googletagmanager.com/ns.html?id={{ google_tag_manager_id }}" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
