--- a/views/theme/services.twig
+++ b/views/theme/services.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig" %}
+{% extends "_base.twig" %}
 {% from "modules/content.twig" import pageIntro %}
 
 {% set includes = "includes/services/" %}
