--- a/views/theme/taxonomy.twig
+++ b/views/theme/taxonomy.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig" %}
+{% extends "_base.twig" %}
 
 {% set includes = "includes/taxonomy/" %}
 {% set sections = includes ~ "section--" %}
