--- a/assets/src/theme/scss/layout/_hero.scss
+++ b/assets/src/theme/scss/layout/_hero.scss
@@ -54,6 +54,7 @@
     .hero__bg-img {
       background-attachment: fixed;
       // background-image: image($hero-front-bg-img);
+      background-image: unsplash-src(random/1920x1080);
       animation-duration: 25s;
     }
   }
@@ -62,6 +63,7 @@
   &.hero--services {
     .hero__bg-img {
       // background-image: image($hero-services-bg-img);
+      background-image: unsplash-src(random/1920x1080);
     }
   }
 
@@ -71,6 +73,7 @@
 
     .hero__bg-img {
       // background-image: image($hero-contact-bg-img);
+      background-image: unsplash-src(random/1920x1080);
       // background-size: 100% auto;
     }
   }
@@ -79,6 +82,7 @@
   &.hero--about {
     .hero__bg-img {
       // background-image: image($hero-about-bg-img);
+      background-image: unsplash-src(random/1920x1080);
     }
   }
 
@@ -86,6 +90,7 @@
     min-height: 50vh;
     .hero__bg-img {
       // background-image: image($hero-page-bg-img);
+      background-image: unsplash-src(random/1920x1080);
     }
   }
 
@@ -94,6 +99,7 @@
 
     .hero__bg-img {
       // background-image: image($hero-404-bg-img);
+      background-image: unsplash-src(random/1920x1080);
     }
   }
 }
