updated front end boilerplate for bootstrap 5 compatibility

--- a/views/theme/layout/header--simple.twig
+++ b/views/theme/layout/header--simple.twig
@@ -6,7 +6,7 @@
       <div class="col">
 
         <h1 class="hero__title mr-auto text-left display-4 font-weight-normal mt-auto">
-          {{ include(hero.statement) }}
+          {{ lorem(5, 'words') }}
         </h1>
 
       </div>
