--- a/views/theme/contact.twig
+++ b/views/theme/contact.twig
@@ -6,46 +6,51 @@
 
 {# global field values #}
 {% set fieldIdBase = "form--" %}
-{% set fieldClasslist = ['form-control', 'form-control-lg'] %}
+{% set fieldClasslist = "form-control form-control-lg" %}
 
-{# name #}
-{% set nameField = field('text', {
-  name: form.fields.full_name.name,
-  required: form.fields.full_name.required,
-  id: fieldIdBase ~ "first-name",
-  classlist: fieldClasslist,
-  placeholder: 'Your Name',
-}) %}
+{% set nameField %}
+  <input
+    type="text"
+    name="{{ form.fields.full_name.name }}"
+    id="{{ form.fields.full_name.required }}"
+    required="{{ fieldIdBase ~ "name" }}"
+    class="{{ fieldClasslist }}"
+    placeholder="Your Name"
+  >
+{% endset %}
 
-{# phone number #}
-{% set phoneField = field('tel', {
-  name: form.fields.phone_number.name,
-  required: form.fields.phone_number.required,
-  id: fieldIdBase ~ "phone-number",
-  classlist: fieldClasslist,
-  placeholder: 'Phone Number',
-}) %}
+{% set phoneField %}
+  <input
+    type="tel"
+    name="{{ form.fields.phone_number.name }}"
+    required="{{ form.fields.phone_number.required }}"
+    id="{{ fieldIdBase ~ "phone" }}"
+    class="{{ fieldClasslist }}"
+    placeholder="Phone Number"
+  >
+{% endset %}
 
-{# email address #}
-{% set emailField = field('email', {
-  name: form.fields.email_address.name,
-  required: form.fields.email_address.required,
-  id: fieldIdBase ~ "email-address",
-  classlist: fieldClasslist,
-  placeholder: 'Email Address',
-}) %}
+{% set emailField %}
+  <input
+    type="email"
+    name="{{ form.fields.email_address.name }}"
+    required="{{ form.fields.email_address.required }}"
+    id="{{ fieldIdBase ~ "email" }}"
+    class="{{ fieldClasslist }}"
+    placeholder="Email Address"
+  >
+{% endset %}
 
-{# message #}
-{% set messageField = field('textarea', {
-  name: form.fields.message.name,
-  required: form.fields.message.required,
-  id: fieldIdBase ~ "message",
-  classlist: fieldClasslist,
-  placeholder: 'How can we help?',
-  label: 'Message',
-  rows: 7,
-  value: ''
-}) %}
+{% set messageField %}
+  <textarea
+    name="{{ form.fields.message.name }}"
+    required="{{ form.fields.message.required }}"
+    id="{{ fieldIdBase ~ "message" }}"
+    class="{{ fieldClasslist }}"
+    placeholder="How can we help?"
+    rows="7"
+  ></textarea>
+{% endset %}
 
 {# begin template #}
 
@@ -53,9 +58,9 @@
   {% include "layout/header--simple.twig" %}
 {% endblock %}
 
-{% block content %}
+{% block main %}
 
-  <main class="py-5 bg-quaternary contact-form contact-form--footer">
+  <main class="section">
     <div class="container">
       <div class="row">
 
@@ -64,14 +69,14 @@
           <div class="mt-4 h5 font-weight-normal">
 
             <div>
-              <span class="d-block h4 0d-md-none">Call:</span>
+              <span class="d-block h4">Call:</span>
               <a href="{{ entity.phone | phone_link }}">{{ entity.phone | us_phone }}</a>
             </div>
 
             <div class="py-2"></div>
 
             <div>
-              <span class="d-block h4 0d-md-none">Email:</span>
+              <span class="d-block h4">Email:</span>
               <a href="mailto:{{ entity.email }}">{{ entity.email }}</a>
             </div>
 
@@ -82,28 +87,30 @@
         <div class="col-lg">
           <form id="contact-form" action="{{ form.action }}" method="{{ form.method }}">
 
-            {% for validation_field in form.security %}
-              {{ validation_field }}
-            {% endfor %}
+            {{ form.process }}
 
             {# fields with appended icons #}
             {% set icons = ['user', 'mobile-alt', 'at', 'building', 'globe'] %}
             {% set styles = ['fas', 'fas', 'fas', 'fas', 'fas'] %}
             {% set fields = [nameField, phoneField, emailField] %}
+            {% set labels = ['Name', 'Phone Number', 'Email Address'] %}
+            {% set ids = prefix(fieldIdBase, 'name', 'phone', 'email') %}
 
             {% for field in fields %}
 
               {% set icon = icons[loop.index0] %}
               {% set style = styles[loop.index0] %}
+              {% set label = labels[loop.index0] %}
+              {% set id = ids[loop.index0] %}
 
-              {{ fields.bsAppended(field, field.getPlaceHolder(), field.getId(), icons.fa(icon, style)) }}
+              {{ fields.bsAppended(field, label, id, icons.fa(icon, style)) }}
 
             {% endfor %}
 
             {# message field #}
-            {{ fields.bsSimple(messageField, messageField.getLabel(), messageField.getId()) }}
+            {{ fields.bsSimple(messageField, 'Message', fieldIdBase ~ 'message') }}
 
-            <button class="btn btn-color-2" type="submit">Request Proposal</button>
+            <button class="btn btn-primary" type="submit">Send Message</button>
 
           </form>
         </div>
