--- a/views/theme/layout/footer.twig
+++ b/views/theme/layout/footer.twig
@@ -1,6 +1,6 @@
 {% set expanded = 'lg' %}
 
-<footer id="footer" class="footer text-white-70 0bg-color-6 bg-tertiary pt-5">
+<footer id="footer" class="footer text-white-70 bg-secondary pt-5">
 
   <section id="footer-body" class="pb-{{expanded}}-5">
     <div class="container">
@@ -38,10 +38,8 @@
 
         {# social media #}
         <section class="col-{{ expanded }} text-center pt-4 pt-{{ expanded }}-0">
-
           <p class="h5">Connect On Social Media</p>
-
-          <div class="link-no-decor sm-icons text-color-2-70">
+          <div class="link-no-decor sm-icons text-white-70">
 
             {% for platform, config in footer.social_media %}
               <a href="{{ config.url }}" title="{{ config.name }}" class="sm-link mx-1">
@@ -50,7 +48,6 @@
             {% endfor %}
 
           </div>
-
         </section>
 
       </div>
@@ -61,20 +58,18 @@
   <section id="footer-footer" class="text-left mt-3 py-2">
     <div class="container text-center text-lg-left">
       <small class="h6 d-block mx-auto font-weight-normal opacity-100">
-
         <span class="d-block d-md-inline">
+
           &copy;
           {{ 'now' | date('Y') }}
           {{ entity.full_title }}
+
         </span>
-
         <span class="d-none d-md-inline">{{ separator(2) }}</span>
-
         <span class="d-block d-md-inline pt-2 pt-md-0">
           <a href="{{ developer.link }}">Design by
             {{ developer.name }}</a>
         </span>
-
       </small>
     </div>
   </section>
