bin/prefill updated to change all configured references

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Pseudo Theme
-Theme URI: :theme_url
+Theme URI: :theme_website
 Author: the :theme_author
-Author URI: :author_url
+Author URI: :author_website
 Description: :theme_description
 Version: :theme_version
 Requires at least: 5.0
