--- a/views/theme/_base.twig
+++ b/views/theme/_base.twig
@@ -22,7 +22,7 @@
     {{ wp_head }}
   </head>
 
-  <body id="body" class="{{ body.class }} bg-quaternary" {{ body.attributes }}>
+  <body id="body" class="{{ body.class }}" {{ body.attributes }}>
 
     {% include "includes/base/google-tag-manager--body.twig" %}
 
