removed 'the' from style.css Author field

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Pseudo Theme
 Theme URI: :theme_website
-Author: the :theme_author
+Author: :theme_author
 Author URI: :author_website
 Description: :theme_description
 Version: :theme_version
