updated all npm packages to latest major version

--- a/assets/src/theme/scss/abstracts/_variables.scss
+++ b/assets/src/theme/scss/abstracts/_variables.scss
@@ -1,4 +1,5 @@
-@import "variables/colors";
-@import "variables/typography";
-@import "variables/animations";
-@import "variables/base";
+@import 'variables/colors';
+@import 'variables/typography';
+@import 'variables/animations';
+@import 'variables/base';
+@import 'variables/brands';
