--- a/assets/src/theme/scss/abstracts/variables/_colors.scss
+++ b/assets/src/theme/scss/abstracts/variables/_colors.scss
@@ -1,43 +1,18 @@
 // Pallete
 $blackboard: #565656;
 $charcoal: #373737;
-$dusty: #96858F;
-$grain: #D7CEC7;
-$lavendar: #6D7993;
-$overcast: #9099A2;
+$dusty: #96858f;
+$grain: #d7cec7;
+$lavendar: #6d7993;
+$overcast: #9099a2;
 $oxBlood: #76323f;
-$paleGold: #C0B283;
-$paper2: #D5D5D5;
-$paper: #F4F4F4;
-$silk: #DCD0C0;
+$paleGold: #c0b283;
+$paleGray: #d5d5d5;
+$paper: #f4f4f4;
+$silk: #dcd0c0;
 $tan: #c09f80;
 $gold: #d4af37;
-$jasmine: #61B2A7;
-
-// Vendors
-$vendor-colors: (
-  adn: #d87a68,
-  bitbucket: #205081,
-  dropbox: #1087dd,
-  facebook: rgb(59, 89, 152),
-  flickr: #ff0084,
-  foursquare: #f94877,
-  github: #444444,
-  google: #dd4b39,
-  instagram: rgb(195, 42, 163),
-  linkedin: #007bb6,
-  microsoft: #2672ec,
-  odnoklassniki: #f4731c,
-  openid: #f7931e,
-  pinterest: #cb2027,
-  reddit: #eff7ff,
-  soundcloud: #ff5500,
-  tumblr: #2c4762,
-  twitter: rgb(29, 161, 242),
-  vimeo: #1ab7ea,
-  vk: #587ea3,
-  yahoo: #720e9e,
-);
+$jasmine: #61b2a7;
 
 // Opacity
 $opacity-levels: (
@@ -50,5 +25,5 @@ $opacity-levels: (
   70: 0.7,
   80: 0.8,
   90: 0.9,
-  none: 10
-)
+  none: 10,
+);
