--- a/assets/src/theme/scss/main.scss
+++ b/assets/src/theme/scss/main.scss
@@ -1,37 +1,37 @@
 // abstracts
-@import "abstracts/functions";
-@import "abstracts/variables";
-@import "abstracts/mixins";
+@import 'abstracts/functions';
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 // vendors
-@import "vendors/animate";
-@import "vendors/aos";
-@import "vendors/bootstrap";
-@import "vendors/glidejs";
-@import "vendors/loaders";
-@import "vendors/magic";
-@import "vendors/rfs";
+@import 'vendors/animate';
+@import 'vendors/aos';
+@import 'vendors/bootstrap';
+@import 'vendors/glidejs';
+@import 'vendors/loaders';
+@import 'vendors/magic';
+@import 'vendors/rfs';
 
 // base
-@import "base/animate";
-@import "base/colors";
-@import "base/defaults";
-@import "base/font-awesome";
-@import "base/media-queries";
-@import "base/misc";
-@import "base/positioning";
-@import "base/spacing";
-@import "base/typography";
+@import 'base/animate';
+@import 'base/colors';
+@import 'base/defaults';
+@import 'base/font-awesome';
+@import 'base/media-queries';
+@import 'base/misc';
+@import 'base/positioning';
+@import 'base/spacing';
+@import 'base/typography';
 
 // components
-@import "components/card";
-@import "components/forms";
-@import "components/masonry";
-@import "components/slider";
+@import 'components/card';
+@import 'components/forms';
+@import 'components/masonry';
+@import 'components/slider';
 
 // layout
-@import "layout/content";
-@import "layout/footer";
-@import "layout/hero";
-@import "layout/navbar";
-@import "layout/section";
+@import 'layout/content';
+@import 'layout/footer';
+@import 'layout/hero';
+@import 'layout/navbar';
+@import 'layout/section';
