--- a/assets/src/theme/scss/abstracts/_mixins.scss
+++ b/assets/src/theme/scss/abstracts/_mixins.scss
@@ -1,6 +1,6 @@
-@import "mixins/footer";
-@import "mixins/header";
-@import "mixins/hero";
-@import "mixins/misc";
-@import "mixins/navbar";
-@import "mixins/navigation";
+@import 'mixins/footer';
+@import 'mixins/header';
+@import 'mixins/hero';
+@import 'mixins/misc';
+@import 'mixins/navbar';
+@import 'mixins/navigation';
