--- a/assets/src/theme/scss/base/_animate.scss
+++ b/assets/src/theme/scss/base/_animate.scss
@@ -1,5 +1,5 @@
 @each $animation in $animations {
-  $animation: "animate__#{$animation}";
+  $animation: 'animate__#{$animation}';
 
   .animate-hover-#{$animation}:hover {
     @extend .animate__animated;
