--- a/assets/src/theme/scss/base/_misc.scss
+++ b/assets/src/theme/scss/base/_misc.scss
@@ -1,4 +1,3 @@
-
 //
 .focus-keep:focus {
   background-color: default;
@@ -28,7 +27,7 @@
 
 //
 .border-highlight {
-  border-color: rgba(black, .3) !important;
+  border-color: rgba(black, 0.3) !important;
 }
 
 //
