--- a/assets/src/theme/scss/layout/_content.scss
+++ b/assets/src/theme/scss/layout/_content.scss
@@ -59,9 +59,9 @@
 
 //
 .space-thing {
-  box-shadow: 0 0 40px 20px inset theme-color("quaternary"),
-    0 0 20px 10px inset theme-color("quaternary"),
-    0 0 10px 5px inset theme-color("quaternary");
+  box-shadow: 0 0 40px 20px inset theme-color('quaternary'),
+    0 0 20px 10px inset theme-color('quaternary'),
+    0 0 10px 5px inset theme-color('quaternary');
   border-radius: 40%;
 
   img {
