--- a/assets/src/theme/scss/main.scss
+++ b/assets/src/theme/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'vendors/animate';
 @import 'vendors/aos';
 @import 'vendors/bootstrap';
+@import 'vendors/font-awesome';
 @import 'vendors/glidejs';
 @import 'vendors/loaders';
 @import 'vendors/magic';
@@ -16,7 +17,6 @@
 @import 'base/animate';
 @import 'base/colors';
 @import 'base/defaults';
-@import 'base/font-awesome';
 @import 'base/media-queries';
 @import 'base/misc';
 @import 'base/positioning';
