updated bootstrap modules configuration

--- a/assets/src/theme/scss/abstracts/variables/_base.scss
+++ b/assets/src/theme/scss/abstracts/variables/_base.scss
@@ -1,15 +1,13 @@
-// navbar
-
+// Navbar
 $navbar-height-xs: 70px;
 $navbar-height-md: 100px;
 
-// hero
-
+// Hero
 $hero-padding-top-xs: $navbar-height-xs;
 $hero-padding-top-md: $navbar-height-md;
 $hero-height-xs: 680px;
 $hero-height-lg: 70vh;
 
-// content
+// Content
 
-// footer
+// Footer
