--- a/assets/src/theme/scss/abstracts/variables/_colors.scss
+++ b/assets/src/theme/scss/abstracts/variables/_colors.scss
@@ -1,9 +1,9 @@
-// Pallete
+// Pallette
 $blackboard: #565656;
 $charcoal: #373737;
 $dusty: #96858f;
 $grain: #d7cec7;
-$lavendar: #6d7993;
+$lavender: #6d7993;
 $overcast: #9099a2;
 $oxBlood: #76323f;
 $paleGold: #c0b283;
