--- a/assets/src/theme/scss/abstracts/variables/_animations.scss
+++ b/assets/src/theme/scss/abstracts/variables/_animations.scss
@@ -1,138 +1,138 @@
 // Selection of animations from animate.css. This list is not used to determine
 // which animations are imported, but for dynamic generation of animation
-// utilities. For better performance during compilation, comment out what you
-// don't anticipate using.
+// utilities. For better performance keep only what you anticipate using.
+
 $animate-css-animations: (
   attention_seekers: (
-    bounce,
-    flash,
-    pulse,
-    rubberBand,
-    shakeX,
-    shakeY,
-    headShake,
-    swing,
-    tada,
-    wobble,
-    jello,
-    heartBeat,
+    'bounce',
+    'flash',
+    'pulse',
+    'rubberBand',
+    'shakeX',
+    'shakeY',
+    'headShake',
+    'swing',
+    'tada',
+    'wobble',
+    'jello',
+    'heartBeat',
   ),
   back_entrances: (
-    backInDown,
-    backInLeft,
-    backInRight,
-    backInUp,
+    'backInDown',
+    'backInLeft',
+    'backInRight',
+    'backInUp',
   ),
   back_exits: (
-    backOutDown,
-    backOutLeft,
-    backOutRight,
-    backOutUp,
+    'backOutDown',
+    'backOutLeft',
+    'backOutRight',
+    'backOutUp',
   ),
   bouncing_entrances: (
-    bounceIn,
-    bounceInDown,
-    bounceInLeft,
-    bounceInRight,
-    bounceInUp,
+    'bounceIn',
+    'bounceInDown',
+    'bounceInLeft',
+    'bounceInRight',
+    'bounceInUp',
   ),
   bouncing_exits: (
-    bounceOut,
-    bounceOutDown,
-    bounceOutLeft,
-    bounceOutRight,
-    bounceOutUp,
+    'bounceOut',
+    'bounceOutDown',
+    'bounceOutLeft',
+    'bounceOutRight',
+    'bounceOutUp',
   ),
   fading_entrances: (
-    fadeIn,
-    fadeInDown,
-    fadeInDownBig,
-    fadeInLeft,
-    fadeInLeftBig,
-    fadeInRight,
-    fadeInRightBig,
-    fadeInUp,
-    fadeInUpBig,
-    fadeInTopLeft,
-    fadeInTopRight,
-    fadeInBottomLeft,
-    fadeInBottomRight,
+    'fadeIn',
+    'fadeInDown',
+    'fadeInDownBig',
+    'fadeInLeft',
+    'fadeInLeftBig',
+    'fadeInRight',
+    'fadeInRightBig',
+    'fadeInUp',
+    'fadeInUpBig',
+    'fadeInTopLeft',
+    'fadeInTopRight',
+    'fadeInBottomLeft',
+    'fadeInBottomRight',
   ),
   fading_exits: (
-    fadeOut,
-    fadeOutDown,
-    fadeOutDownBig,
-    fadeOutLeft,
-    fadeOutLeftBig,
-    fadeOutRight,
-    fadeOutRightBig,
-    fadeOutUp,
-    fadeOutUpBig,
-    fadeOutTopLeft,
-    fadeOutTopRight,
-    fadeOutBottomRight,
-    fadeOutBottomLeft,
+    'fadeOut',
+    'fadeOutDown',
+    'fadeOutDownBig',
+    'fadeOutLeft',
+    'fadeOutLeftBig',
+    'fadeOutRight',
+    'fadeOutRightBig',
+    'fadeOutUp',
+    'fadeOutUpBig',
+    'fadeOutTopLeft',
+    'fadeOutTopRight',
+    'fadeOutBottomRight',
+    'fadeOutBottomLeft',
   ),
   flippers: (
-    flip,
-    flipInX,
-    flipInY,
-    flipOutX,
-    flipOutY,
+    'flip',
+    'flipInX',
+    'flipInY',
+    'flipOutX',
+    'flipOutY',
   ),
   lightspeed: (
-    lightSpeedInLeft,
-    lightSpeedInRight,
-    lightSpeedOutLeft,
-    lightSpeedOutRight,
+    'lightSpeedInLeft',
+    'lightSpeedInRight',
+    'lightSpeedOutLeft',
+    'lightSpeedOutRight',
   ),
   rotating_entrances: (
-    rotateIn,
-    rotateInDownLeft,
-    rotateInDownRight,
-    rotateInUpLeft,
-    rotateInUpRight,
+    'rotateIn',
+    'rotateInDownLeft',
+    'rotateInDownRight',
+    'rotateInUpLeft',
+    'rotateInUpRight',
   ),
   rotating_exits: (
-    rotateOut,
-    rotateOutDownLeft,
-    rotateOutDownRight,
-    rotateOutUpLeft,
-    rotateOutUpRight,
+    'rotateOut',
+    'rotateOutDownLeft',
+    'rotateOutDownRight',
+    'rotateOutUpLeft',
+    'rotateOutUpRight',
   ),
   sliding_entrances: (
-    slideInDown,
-    slideInLeft,
-    slideInRight,
-    slideInUp,
+    'slideInDown',
+    'slideInLeft',
+    'slideInRight',
+    'slideInUp',
   ),
   sliding_exits: (
-    slideOutDown,
-    slideOutLeft,
-    slideOutRight,
-    slideOutUp,
+    'slideOutDown',
+    'slideOutLeft',
+    'slideOutRight',
+    'slideOutUp',
   ),
   specials: (
-    hinge,
-    jackInTheBox,
-    rollIn,
-    rollOut,
+    'hinge',
+    'jackInTheBox',
+    'rollIn',
+    'rollOut',
   ),
   zooming_entrances: (
-    zoomIn,
-    zoomInDown,
-    zoomInLeft,
-    zoomInRight,
-    zoomInUp,
+    'zoomIn',
+    'zoomInDown',
+    'zoomInLeft',
+    'zoomInRight',
+    'zoomInUp',
   ),
   zooming_exits: (
-    zoomOut,
-    zoomOutDown,
-    zoomOutLeft,
-    zoomOutRight,
-    zoomOutUp,
+    'zoomOut',
+    'zoomOutDown',
+    'zoomOutLeft',
+    'zoomOutRight',
+    'zoomOutUp',
   ),
 );
 
 // list of animations used for automatic utility generation
-$animations: flatten($animate-css-animations);
+$animate-css-utils: flatten($animate-css-animations);
