--- a/assets/src/theme/scss/base/_animate.scss
+++ b/assets/src/theme/scss/base/_animate.scss
@@ -1,4 +1,4 @@
-@each $animation in $animations {
+@each $animation in $animate-css-utils {
   $animation: 'animate__#{$animation}';
 
   .animate-hover-#{$animation}:hover {
