--- a/views/theme/routes/contact/includes/form.twig
+++ b/views/theme/routes/contact/includes/form.twig
@@ -1,5 +1,5 @@
-{% import "modules/fields.twig" as fields %}
-{% import "modules/icons.twig" as icons %}
+{% import "modules/fields" as fields %}
+{% import "modules/icons" as icons %}
 
 {# values used to instruct rendering of fields that cannot be resolved in iteration #}
 {% set definitions = {
