--- a/views/theme/routes/post/index.twig
+++ b/views/theme/routes/post/index.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig" %}
+{% extends "base" %}
 
 {% set includes = "routes/post/includes/" %}
 {% set sections = includes ~ "section--" %}
