--- a/views/theme/routes/services/includes/section--highlights.twig
+++ b/views/theme/routes/services/includes/section--highlights.twig
@@ -1,5 +1,5 @@
-{% import "modules/cards.twig" as card %}
-{% import "modules/utils.twig" as util %}
+{% import "modules/cards" as card %}
+{% import "modules/utils" as util %}
 
 <section class="services-section services-section--services pt-0 pb-5 pb-lg-7 bg-quaternary">
   <div class="container">
