--- a/views/theme/routes/about/about.twig
+++ b/views/theme/routes/about/about.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig" %}
+{% extends "base" %}
 
 {% set includes = "routes/about/includes/" %}
 {% set sections = includes ~ "section--" %}
