--- a/views/theme/routes/services/index.twig
+++ b/views/theme/routes/services/index.twig
@@ -1,5 +1,5 @@
-{% extends "base.twig" %}
-{% from "modules/content.twig" import pageIntro %}
+{% extends "base" %}
+{% from "modules/content" import pageIntro %}
 
 {% set includes = "routes/services/includes/" %}
 {% set sections = includes ~ "section--" %}
